# realtime_app

./: CMakeLists.txt  README.md  realtime_app.vix  vix.json
examples/: chat_rooms.cpp  minimal_ws_runtime.cpp  presence.cpp  sse_format.cpp
include/realtime_app/: realtime_app.hpp
tests/: test_basic.cpp
